testsuite/tests/lexical_envs/invalid_entity_resolver/bad_return_type/test.lkt
import common

class FooNode implements Node[FooNode] {
    fun resolve_ref(): Array[Entity[FooNode]] = node.node_env.get(s"foo")
}
